@@ -1,7 +1,6 @@
 use strict;
 use warnings;
-use DDP;
-
+use Data::Printer;
 use MetaCPAN::Client;
 
 my $author =
