@@ -1,12 +1,10 @@
 use strict;
 use warnings;
-use DDP;
+use Data::Printer;
 use MetaCPAN::Client;
 
-my $mcpan = MetaCPAN::Client->new;
-
-my $author = $mcpan->author('XSAWYERX');
-
+my $mcpan    = MetaCPAN::Client->new;
+my $author   = $mcpan->author('XSAWYERX');
 my $releases = $author->releases;
 
 p $releases->total;
